feat: XPath Selector nearly works, some Updates to the configuration file