@@ -5,6 +5,9 @@ import java.nio.file.Path;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.concurrent.TimeUnit;
 
+import de.sub.goobi.helper.StorageProvider;
+import de.sub.goobi.helper.StorageProviderInterface;
+
 public class ToolRunner {
 	private ToolConfiguration toolConfiguration;
 	private Path outputPath;
@@ -20,6 +23,11 @@ public class ToolRunner {
 		String inputName = pdfFile.getFileName().toString();
 		String outputName = inputName.substring(0, inputName.lastIndexOf('.')) + "_" + this.toolConfiguration.getName()
 				+ ".xml";
+		
+		//create OutputFolder if it does not exist
+		StorageProviderInterface SPI = StorageProvider.getInstance();
+		if (!SPI.isFileExists(outputPath))
+			SPI.createDirectories(outputPath);
 		Path fOutputPath = outputPath.resolve(outputName);
 
 		// replace variables in String or use environment variables
@@ -29,8 +37,9 @@ public class ToolRunner {
 		if (toolConfiguration.isStdout()) {
 			// --> reroute stdout to file
 		} else {
-			ProcessBuilder builder = new ProcessBuilder("notepad.exe");
-			ToolProcess = builder.start();
+			// ProcessBuilder builder = new ProcessBuilder(cmd);
+			// ToolProcess = builder.start();
+			ToolProcess = Runtime.getRuntime().exec(cmd);
 			ToolProcess.waitFor(360, TimeUnit.SECONDS);
 		}
 		return new SimpleEntry<>(pdfFile.toString(), fOutputPath.toString());
